# MayaPlugins

./: .clang-format  .gitignore  LICENSE  MayaAPI_CLasses.md  README.md  extra.bat  extra.sh  firstPlugin.mll
.buildSystem/linux/: build.sh  build_debug.sh  envVars.sh
.buildSystem/win/: build.bat  envVars.bat
M3dMath/: M3dMath.mod
blendDeformer/: CMakeLists.txt  blendDeformer.cpp  blendDeformer.h  blendDeformer.mll  main.cpp
collideDeformer/: CMakeLists.txt  collideDeformer.cpp  collideDeformer.h  collideDeformer.mll  main.cpp
firstPlugin/: CMakeLists.txt  firstCommand.cpp  firstCommand.h  firstPlugin.mll  main.cpp
gaussianNode/: AEgaussianTemplate.mel  CMakeLists.txt  gaussianNode.cpp  gaussianNode.h  gaussianNode.mll  main.cpp  readme.md
helixQtCmd/: CMakeLists.txt  helixQtCmd.mll
inflateDeformer/: CMakeLists.txt  inflateDeformer.cpp  inflateDeformer.h  inflateDeformer.mll  main.cpp
pythonPlugins/: nodeInfoCmd.py
pythonPlugins_1.0/: sceneCallbacks.py
pythonPlugins_2.0/: nodeInfoCmd.py  retrieveWeight.py
qForms/: CMakeLists.txt  qForms.mll  qtForms.qrc
qtForms/: CMakeLists.txt  qtForms.h  qtForms.qrc
